# pyacquisition

./: .gitignore  .readthedocs.yml  LICENSE  README.md  demo.py  example.py  experiment.toml  fapi.py  front.py  instrument_config.json  interface_config.json  main.py  mkdocs.yml  plot.py  pyproject.toml  recv.py  requirements.txt  soft_config.json  temp_ui.py  test.py  test_experiment.py  test_file_0001.data  test_file_0002.data  ui_config.json
data_sub/: 00.00 start.data  01.00 start.data  02.00 start.data  03.00 start.data  04.00 start.data  05.00 start.data  06.00 start.data  07.00 start.data  08.00 start.data  09.00 start.data  10.00 start.data  100.00 start.data  11.00 start.data  12.00 start.data  13.00 start.data  14.00 start.data  15.00 start.data  16.00 start.data  17.00 start.data  18.00 start.data  19.00 start.data  20.00 start.data  21.00 start.data  22.00 start.data  23.00 start.data  24.00 start.data  25.00 start.data  26.00 start.data  27.00 start.data  28.00 start.data  29.00 start.data  30.00 start.data  31.00 start.data  32.00 start.data  33.00 start.data  34.00 start.data  35.00 start.data  36.00 start.data  37.00 start.data  38.00 start.data  (+61 more)
docs/: README.md  index.html  index.md  main.py
docs/.streamlit/: config.toml
docs/advanced/: configuration.md  instruments.md  overview.md
docs/basic/: configuration.md  getting_started.md  installation.md
docs/basics/: configuration.md  getting_started.md  installation.md
docs/dev/: contributing.md  overview.md
docs/experiment/: experiment.md
src/: __init__.py  api.py  broadcaster.py  consumer.py  experiment.py  graph.py  rack.py  scribe.py  websocket_server.py
tests/: test_api_server.py  test_broadcaster_consumer.py  test_broadcaster_subscriber.py  test_coroutine.py  test_dataframe.py  test_experiment.py  test_experiment_task_functions.py  test_inspectable_queue.py  test_instrument_cache.py  test_instrument_clock.py  test_instrument_queries_commands.py  test_logging.py  test_measurement.py  test_openapi.py  test_relay.py  test_scribe.py  test_visa_prologix.py
(+219 files in other folders)
