[project]
name = "pyacquisition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jakeayres", email = "jake_ayres@hotmail.co.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "mkdocstrings[python]>=0.29.1",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
